--- a/tasks/hosts.yml
+++ b/tasks/hosts.yml
@@ -1,16 +1,16 @@
 ---
-- name: Local host name
+- name: Hosts - Local host
   become: true
   ansible.builtin.hostname:
-    name: "{{ system_hostname }}"
+    name: "{{ system_hosts_localhost }}"
   notify: restart logind
 
-- name: Display system hosts for debugging
+- name: Hosts - Display system for debugging
   ansible.builtin.debug:
     var: system_hosts
     verbosity: 1
 
-- name: Hosts names in /etc/hosts
+- name: Hosts - Names in /etc/hosts
   become: true
   ansible.builtin.lineinfile:
     path: /etc/hosts
@@ -19,20 +19,20 @@
   with_items: "{{ system_hosts }}"
   notify: restart logind
 
-- name: OpenRC host and domain name configuration
+- name: Hosts - OpenRC configuration
   when: ansible_service_mgr == "openrc"
   become: true
   notify: restart hostname
   block:
-    - name: Remove /etc/hostname
+    - name: Hosts - OpenRC - Remove /etc/hostname
       ansible.builtin.file:
         path: /etc/hostname
         state: absent
 
-    - name: Domain name
+    - name: Hosts - OpenRC - Domain name
       ansible.builtin.lineinfile:
         path: /etc/conf.d/net
-        line: 'dns_domain_lo="{{ system_domainname }}"'
+        line: 'dns_domain_lo="{{ system_hosts_domain }}"'
         regex: ^dns_domain_lo=
         create: true
         group: wheel
