--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,8 +9,8 @@ system_hosts_custom: []
 
 system_bin_path: /usr/local/bin
 
-system_pkg_update: false
-system_pkg_mgr_cache_age: 7
+system_packages_update: false
+system_packages_cache_age: 7
 
 system_profile: server
 
