--- a/meta/argument_specs.yml
+++ b/meta/argument_specs.yml
@@ -35,17 +35,33 @@ argument_specs:
         default: "[]"
         description: List of external custom hosts.
 
+  proxy:
+    short_description: Configure network proxies
+    options:
+      system_http_proxy:
+        default: "null"
+        description: Proxy server for HTTP connections
+      system_https_proxy:
+        default: "null"
+        description: Proxy server for HTTPs connections
+      system_ftp_proxy:
+        default: "null"
+        description: Proxy server for FTP connections
+      system_no_proxy:
+        default: "null"
+        description: Comma-separated list of domain extensions proxy should not be used for
+
   packages:
     short_description: Configure the package manager and install/update the system
     options:
       system_bin_path:
         default: /usr/local/bin
         description: Path location for our scripts
-      system_pkg_mgr_cache_age:
+      system_packages_cache_age:
         type: int
         default: 7
         description: The maximum accepted cache age (in days)
-      system_pkg_update:
+      system_packages_update:
         type: bool
         default: false
         description: Ask a system update, default to false to permit playbooks idempotence.
