--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -10,7 +10,5 @@
 
     - name: ZSH
       ansible.builtin.command:
-        cmd: command -v zsh
+        cmd: zsh --version
       changed_when: false
-      register: result
-      failed_when: result.rc == 0
